service-weather-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
spec:
  selector:
    app: weather-app-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
