ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: loopin.exchangeweb.net
    http:
      paths:
      - backend:
          service:
            name: weather-app-service
            port:
              number: 3000
        path: /
        pathType: Prefix
